//         Then go the changes in the existing behavior. They usually start with "Update".
//     Bugfixes:
//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.
----------------------------------------------------------------------------------------------------------------------
Version:
Date:
    Fixes:
        - Prevent productivity bonuses from exceeding +300%, unless otherwise allowed by mods.
        - When loading duplicate research productivity effects, obey both of them, instead of failing.
        - Fixed a crash when item.weight == 0, related to ultracube.
        - If the requested mod version isn't found, use the latest, like Factorio.
        - Fix amounts loaded from other pages in the legacy summary page.
        - Improved precision for building count calculation.
        - Remove automatic catalyst amount calculations when loading Factorio 2.0 data.
----------------------------------------------------------------------------------------------------------------------
Version: 2.11.1
Date: April 5th 2025
    Fixes:
        - (regression) Fix opening new unnamed files.
        - (.NET 9) Fix page name display in the search-all dropdown.
        - When calculating the required inserters, remember that inserters cannot hold more than one stack.
    Internal changes:
        - Quality objects now have reference equality and abstract serialization, like FactorioObjects.
----------------------------------------------------------------------------------------------------------------------
Version: 2.11.0
Date: March 21st 2025
    Features:
        - Open the preferences or milestones when you click on the icon for the reactor or quality warning messages.
        - Implemented Auto Save.
        - (SA) Research recipes correctly consume quality science packs, and the UI explains this.
        - Added marker to recipes already used on the current page.
    Fixes: