@@ -1,5 +1,6 @@
 ﻿using System;
 using System.Collections.Generic;
+using System.IO;
 using SDL2;
 
 namespace Yafc.UI;
@@ -23,11 +24,28 @@ public class Font(FontFile file, float size) {
         return lastFontSize;
     }
 
+    /// <summary>
+    /// Returns <see langword="true"/> if the current font has glyphs for all characters in the supplied string, or <see langword="false"/> if
+    /// any characters do not have a glyph.
+    /// </summary>
+    public bool CanDraw(string value) {
+        nint handle = lastFontSize!.handle;
+        foreach (char ch in value) {
+            if (SDL_ttf.TTF_GlyphIsProvided(handle, ch) == 0) {
+                return false;
+            }
+        }
+        return true;
+    }
+
     public IntPtr GetHandle(float pixelsPreUnit) => GetFontSize(pixelsPreUnit).handle;
 
     public float GetLineSize(float pixelsPreUnit) => GetFontSize(pixelsPreUnit).lineSize / pixelsPreUnit;
 
     public void Dispose() => file.Dispose();
+
+    public static bool FilesExist(string baseFileName)
+        => File.Exists($"Data/{baseFileName}-Regular.ttf") && File.Exists($"Data/{baseFileName}-Light.ttf");
 }
 
 public sealed class FontFile(string fileName) : IDisposable {
