@@ -17,6 +17,9 @@
 ----------------------------------------------------------------------------------------------------------------------
 Version:
 Date:
+    Features:
+        - When changing the language for Factorio objects, automatically switch to, or download, a font that can
+          display that language.
     Fixes:
         - Prevent productivity bonuses from exceeding +300%, unless otherwise allowed by mods.
         - When loading duplicate research productivity effects, obey both of them, instead of failing.
@@ -25,6 +28,7 @@ Date:
         - Fix amounts loaded from other pages in the legacy summary page.
         - Improved precision for building count calculation.
         - Remove automatic catalyst amount calculations when loading Factorio 2.0 data.
+        - Update documentation for changing the selected Factorio-object language.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.11.1
 Date: April 5th 2025
